paragraph to index.html added

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Hello GitHub!</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, blanditiis minus. Animi dolorem perspiciatis iusto libero totam assumenda dicta debitis eum commodi fuga? Suscipit exercitationem voluptate error vitae esse labore?</p>
 </body>
 </html>
